# libnotify-qt

./: .gitignore  CMakeLists.txt  libnotify-qt.pc.in  libnotify-qt.prf.in  notify-qt.pri  notify-qt.pro
cmake/: QtPathFinder.cmake
data/: CMakeLists.txt  Config.cmake.in
data/qmake5/: CMakeLists.txt
data/qmake6/: CMakeLists.txt
src/: CMakeLists.txt  Event.cpp  Interface.cpp  Interface.h  Manager.cpp  Notification.cpp  Notification.h  NotificationManager.cpp  OrgFreedesktopNotificationsInterface.cpp  OrgFreedesktopNotificationsInterface.h  libnotify-qt.h  libnotify-qt_p.h  logging.h
src/include/: libnotify-qt.h
