if(BUILD_STATIC)
	ecm_generate_pri_file(
		BASE_NAME ${PROJECT_NAME}-static
		LIB_NAME ${PROJECT_NAME}5_static
		DEPS "${QT_QMAKE_COMPONENTS}"
		INCLUDE_INSTALL_DIRS "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}"
		FILENAME_VAR pri_filename
	)
	install(FILES ${pri_filename} DESTINATION "${CMAKE_INSTALL_PREFIX}/${ECM_MKSPECS_INSTALL_DIR}")
endif()

if(BUILD_SHARED)
	ecm_generate_pri_file(
		BASE_NAME ${PROJECT_NAME}
		LIB_NAME ${PROJECT_NAME}5
		DEPS "${QT_QMAKE_COMPONENTS}"
		INCLUDE_INSTALL_DIRS "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}"
		FILENAME_VAR pri_filename
	)
	install(FILES ${pri_filename} DESTINATION "${CMAKE_INSTALL_PREFIX}/${ECM_MKSPECS_INSTALL_DIR}")
endif()
